upgrade job board
